syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.grpc.warehouse";
option java_outer_classname = "WarehouseProto";

package warehouse;

service WarehouseService {
  rpc CheckStock(StockRequest) returns (StockResponse);
  rpc ReserveItems(ReserveRequest) returns (ReserveResponse);
  rpc GetItemInfo(ItemRequest) returns (ItemInfo);
}

message StockRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool available = 1;
  int32 available_quantity = 2;
  string message = 3;
}

message ReserveRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message ReserveResponse {
  bool success = 1;
  string message = 2;
}

message ItemRequest {
  int64 product_id = 1;
}

message ItemInfo {
  int64 id = 1;
  int64 product_id = 2;
  string product_name = 3;
  int32 quantity_available = 4;
  string location = 5;
  double price_per_unit = 6;
}
